# LCEServer

./: .gitignore  CMakeLists.txt  README.md
scripts/: build-release.ps1
src/: main.cpp
src/access/: BanList.cpp  BanList.h  JsonUtil.cpp  JsonUtil.h  OpsList.cpp  OpsList.h  Whitelist.cpp  Whitelist.h
src/console/: Console.cpp  Console.h  LegacyItemIds.cpp  LegacyItemIds.h
src/core/: BlockInteraction.cpp  BlockInteraction.h  BlockPlacement.cpp  BlockPlacement.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  EmbeddedRecipes.h  LegacyCrafting.cpp  LegacyCrafting.h  Logger.cpp  Logger.h  PacketHandler.cpp  PacketHandler.h  Protocol.h  RedstoneLogic.cpp  RedstoneLogic.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  TcpLayer.cpp  TcpLayer.h  TileSupport.cpp  TileSupport.h  Types.h
src/world/: LceSaveFile.cpp  LceSaveFile.h  Nbt.cpp  Nbt.h  RegionFile.cpp  RegionFile.h  SaveManager.cpp  SaveManager.h  World.cpp  World.h
